--- a/Payloads.csproj
+++ b/Payloads.csproj
@@ -19,6 +19,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="MessagePack" Version="2.4.59" />
 	</ItemGroup>
 	<ItemGroup>
 		<Protobuf Include="*\*.proto" GrpcServices="None" />
